--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</ul>
 		</div>
 	</nav>
-	<ul id="slide-out" class="side-nav fixed" style="padding-top: 65px; width: 300px; z-index: 0 !important;">
+	<ul id="slide-out" class="side-nav fixed">
 		<div class="row">
 			<div class="col s12">
 				<div class="card-panel white hoverable">
@@ -84,7 +84,7 @@
 	</ul>
 	<a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 
-	<div class="main" style="height: 99%; width: 100%; padding-top: 65px; z-index: -1;">
+	<div class="main">
 		<div class="row">
 			<div class="col s12">
 				<div class="card-panel white hoverable" style="height: 100% !important;">
@@ -94,7 +94,6 @@
 				</div>
 			</div>
 		</div>
-
 	</div>
 
 	<!--Import jQuery before materialize.js-->
